--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-guitar": "^1.1.2",
+    "react-guitar-theme-dark": "^1.1.2",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.0-rc.1",
     "tonal": "^4.14.1",
+    "tone": "^14.7.77",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
