--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "midi-sounds-react": "^1.2.54",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "tonal": "^4.14.1",
-    "tone": "^14.7.77",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
