Saving the generated notes to midi file works!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "file-saver": "^2.0.5",
     "midi-sounds-react": "^1.2.54",
+    "midi-writer-js": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
