--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "tonal": "^4.14.1",
