--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "tonal": "^4.14.1",
+    "tonal-distance": "^2.2.2",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
