--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "soundfont-player": "^0.12.0",
     "tonal": "^4.14.1",
     "tonal-distance": "^2.2.2",
+    "tone": "^15.0.4",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
