feat: empty notes component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       "hooks/*": ["src/hooks/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "tests.setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
