--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "tonal": "^6.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
