--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@babel/core": "^7.25.2",
 		"@babel/preset-env": "^7.25.4",
 		"@babel/preset-react": "^7.24.7",
-		"@biomejs/biome": "1.9.4"
+		"@biomejs/biome": "1.9.4",
+		"tailwindcss": "^3.4.14"
 	}
 }
