--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@vercel/analytics": "^1.0.1",
 		"@vercel/kv": "^0.2.1",
 		"file-saver": "^2.0.5",
+		"intro.js": "^7.2.0",
 		"midi-sounds-react": "^1.2.54",
 		"midi-writer-js": "^2.1.4",
 		"query-string": "^8.1.0",
