--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"tonal": "^4.14.1",
 		"tonal-distance": "^2.2.2",
 		"tone": "^15.0.4",
-		"web-vitals": "^3.0.4"
+		"web-vitals": "^3.0.4",
+		"zustand": "^5.0.8"
 	},
 	"scripts": {
 		"start": "react-scripts start",
