Fix Biome linting issues across multiple components

--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,15 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"correctness": {
+				"noUnknownFunction": "off"
+			}
+		}
+	},
+	"css": {
+		"linter": {
+			"enabled": true
 		}
 	},
 	"javascript": {
