--- a/package.json
+++ b/package.json
@@ -1,55 +1,32 @@
 {
 	"private": true,
+	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.47.7",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^14.4.3",
 		"@tonejs/midi": "^2.0.28",
 		"@vercel/analytics": "^1.0.1",
-		"@vercel/kv": "^0.2.1",
 		"file-saver": "^2.0.5",
 		"intro.js": "^7.2.0",
-		"midi-sounds-react": "^1.2.54",
 		"midi-writer-js": "^2.1.4",
-		"query-string": "^8.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.9.0",
 		"react-piano": "^3.1.3",
 		"react-router-dom": "^6.16.0",
-		"react-scripts": "^5.0.1",
-		"smplr": "^0.6.1",
-		"soundfont-player": "^0.12.0",
 		"tonal": "^4.14.1",
-		"tonal-distance": "^2.2.2",
 		"tone": "^15.0.4",
-		"web-vitals": "^3.0.4",
 		"zustand": "^5.0.8"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": ["react-app", "react-app/jest"]
-	},
-	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"start": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.25.2",
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"@babel/preset-env": "^7.25.4",
-		"@babel/preset-react": "^7.24.7",
 		"@biomejs/biome": "1.9.4",
-		"tailwindcss": "^3.4.14"
+		"@vitejs/plugin-react": "^5.1.1",
+		"autoprefixer": "^10.4.22",
+		"tailwindcss": "^3.4.14",
+		"vite": "^7.2.4"
 	}
 }
