--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"private": true,
 	"type": "module",
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@supabase/supabase-js": "^2.47.7",
 		"@tonejs/midi": "^2.0.28",
 		"@vercel/analytics": "^1.0.1",
